package ParkingLot;

public abstract class Vehicle {
    public abstract VehicleSize getVehicleSize();
}
