@startuml

title __OOPDESIGNPRACTICES's Class Diagram__\n

  package ParkingLot {
    class Car {
    }
  }
  

  package ParkingLot {
    class Level {
    }
  }
  

  package ParkingLot {
    class ParkingLot {
    }
  }
  

  package ParkingLot {
    class ParkingSpot {
    }
  }
  

  package ParkingLot {
    class Test {
    }
  }
  

  package ParkingLot {
    class Truck {
    }
  }
  

  package ParkingLot {
    abstract class Vehicle {
    }
  }
  

  package ParkingLot {
    enum VehicleSize {
    }
  }
  

  Car -up-|> Vehicle
  ParkingSpot o-- VehicleSize : spotSize
  ParkingSpot o-- Vehicle : currentVehicle
  Truck -up-|> Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
